--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-Flask==2.2.5
-tensorflow==2.20.0
+flask==3.0.0
+tensorflow-cpu==2.14.0
 numpy==1.26.4
-Pillow==9.5.0
-werkzeug==2.2.3
-gunicorn==20.1.0
+opencv-python==4.10.0.84
+pillow==10.3.0
